# service-ambitions

./: .coveragerc  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Implementation_plan.md  LICENSE  Makefile  README.md  SECURITY.md  ambitions.jsonl  herm-services.jsonl  main.py  mkdocs.yml  prompt.md  pyproject.toml  requirements.txt  run.sh  sample-services.json  sample-services.jsonl  uwa-student-services.jsonl
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  general.yml
.github/PULL_REQUEST_TEMPLATE/: bug_fix.md  feature.md
.github/workflows/: ci-main.yml  ci-quick.yml  ci.yml  codeql.yml  docs.yml  e2e.yml  nightly.yml  release.yml
config/: app.example.json  app.example.yaml  app.json  app.yaml
data/: applications.json  definitions.json  information.json  roles.json  service_feature_plateaus.json  sut-admissions.jsonl  sut-roles.json  technologies.json  uwa-roles.json
docs/: coding-standards.md  facets.md  generate-evolution.md  generate-mapping.md  implementation_plan.md  index.md  llm-queue-migration.md  llm-queue.md  logging-levels.md  migrate-jsonl.md  runtime-architecture.md  sd01-flow-of-evolution-prompts.md
output/: S01.01.json
prompts/: definitions.json  definitions.md  description_prompt.md  mapping_prompt.md  mapping_prompt_diagnostics.md  plateau_descriptions_prompt.md  plateau_prompt.md  response_structure.md  service_feature_plateaus.md  task_definition.md
prompts/inspirations/: general.md
prompts/situational_context/: sut.md  university.md  uwa.md
scripts/: migrate_cache.py  migrate_plateau_cache.py
src/: backpressure.py  canonical.py  cli.py  cli_mapping.py  constants.py  conversation.py  diagnostics.py  generator.py  loader.py  mapping.py  mapping_prompt.py  mapping_utils.py  migrate_jsonl.py  migration.py  model_factory.py  models.py  monitoring.py  persistence.py  plateau_generator.py  pydantic_code.py  quarantine.py  redaction.py  retry_utils.py  schema_migration.py  service_loader.py  settings.py  shortcode.py  stage_metrics.py  telemetry.py  token_scheduler.py  token_utils.py
src/cli/: data_validation.py  main.py  mapping.py
src/core/: __init__.py  cache_utils.py  canonical.py  conversation.py  dry_run.py  mapping.py  mapping_prompt.py
src/engine/: __init__.py  plateau_runtime.py  processing_engine.py  service_execution.py  service_runtime.py
src/generation/: __init__.py  generator.py  plateau_generator.py
src/io_utils/: __init__.py  diagnostics.py  loader.py  persistence.py  quarantine.py  service_loader.py
src/llm/: __init__.py  queue.py  retry.py
src/migrations/: __init__.py  schema_migration.py
src/models/: __init__.py  factory.py
src/observability/: __init__.py  monitoring.py  telemetry.py
src/runtime/: __init__.py  environment.py  settings.py
src/service_ambitions/: __init__.py  cli.py  generator.py  loader.py  monitoring.py  settings.py
src/utils/: __init__.py  cache_manager.py  cache_paths.py  error_handler.py  mapping_loader.py  prompt_loader.py  shortcode.py
tests/: conftest.py  test_async_processing.py  test_backpressure.py  test_build_model.py  test_cache_paths.py  test_cancellation.py  test_canonical.py  test_cli.py  test_cli_apply_args_to_settings.py  test_cli_data_validation.py  test_cli_generate_evolution.py  test_cli_generate_mapping.py  test_cli_help_snapshot.py  test_cli_mapping_helpers.py  test_cli_migrate_jsonl.py  test_cli_modes.py  test_cli_parser_helpers.py  test_cli_reverse_helpers.py  test_conversation.py  test_conversation_invocations.py  test_conversation_queue_parity.py  test_diagnostics.py  test_e2e_cli_generate.py  test_e2e_cli_mapping.py  test_e2e_cli_reverse.py  test_generator.py  test_golden_output.py  test_imports.py  test_integration_service_evolution.py  test_llm_queue.py  test_load_definitions.py  test_loader.py  test_loading.py  test_mapping.py  test_mapping_autodiscover.py  test_mapping_batch_size.py  test_mapping_dynamic_batching.py  test_mapping_loader_format.py  test_mapping_prompt.py  test_mapping_utils.py  (+34 more)
tests/fixtures/: mapping_services.jsonl  roles.json  services-invalid.jsonl  services-valid.jsonl
tests/fixtures/catalogue/: applications.json  technologies.json
tests/golden/: mapping_run.jsonl  sample_run.jsonl
